login php modositas

--- a/html/page1.html
+++ b/html/page1.html
@@ -1,6 +1,8 @@
 <div class="container py-5">
-  <h1 class="text-white text-center mb-4">Szolgáltatásaink</h1>
-  <p class="text-center text-white">Fedezd fel prémium szolgáltatásainkat!</p>
+  <div>
+    <h1 class="text-white text-center mb-4">Szolgáltatásaink</h1>
+    <p class="text-center text-white">Fedezd fel prémium szolgáltatásainkat!</p>
+  </div>
 
   <!-- Keresőmező -->
   <div class="mb-3">
