--- a/html/page1.html
+++ b/html/page1.html
@@ -1,8 +1,35 @@
-<div class="container py-5">
-  <div>
-    <h1 class="text-white text-center mb-4">Szolgáltatásaink</h1>
-    <p class="text-center text-white">Fedezd fel prémium szolgáltatásainkat!</p>
+<div class="container px-4 px-lg-5">
+  <!-- Heading Row-->
+  <div class="row gx-4 gx-lg-5 align-items-center my-5">
+    <div class="col-lg-7">
+      
+      <!--Home page carousel-->
+      <div class="container text-center">
+        <img ng-src="{{page1_1_pic}}"
+             class="img-fluid border-primary rounded-3" 
+             alt="Mosás">
+      </div>
+    </div>
+    <div class="col-lg-5">
+      <h1 class="fw-bold display-3">Szolgáltatásaink</h1>
+      <p>
+        Fedezd fel prémium szolgáltatásainkat!
+      </p>
+      <!-- <a class="btn btn-warning" href="#!">Foglaljon időpontot most!</a> -->
+    </div>
   </div>
+
+
+
+
+
+
+
+
+
+
+
+<div class="container py-5">
 
   <!-- Keresőmező -->
   <div class="mb-3">
