--- a/html/home.html
+++ b/html/home.html
@@ -21,17 +21,24 @@
       </div>
     </div>
     <div class="col-lg-5">
-      <h1 class="fw-bold display-3">Super Car Wash</h1>
-      <p>
-        Üdvözlünk a Super Car Wash világában, ahol az autód mindig kiemelt
-        figyelmet és professzionális törődést kap! Nálunk nemcsak egy egyszerű
-        autómosás vár, hanem prémium szolgáltatások, amelyek garantálják, hogy
-        járműved ragyogjon, akár egy új autó. Foglalj időpontot gyorsan és
-        könnyedén, válassz a különböző mosási csomagjaink közül, és tapasztald
-        meg, hogy mit jelent az igazi autós luxus!
-      </p>
-      <a class="btn btn-warning" href="#!">Foglaljon időpontot most!</a>
+      <div class="card bg-dark text-white border-0 rounded-3 h-100" ng-style="cardStyle">
+        <div class="card-body p-0">
+          <div class="p-4">
+            <h1 class="fw-bold display-5 text-warning text-center">Super Car Wash</h1>
+            <p class="text-justify">
+              Üdvözlünk a Super Car Wash világában, ahol az autód mindig kiemelt
+              figyelmet és professzionális törődést kap! Nálunk nemcsak egy egyszerű
+              autómosás vár, hanem prémium szolgáltatások, amelyek garantálják, hogy
+              járműved ragyogjon, akár egy új autó. Foglalj időpontot gyorsan és
+              könnyedén, válassz a különböző mosási csomagjaink közül, és tapasztald
+              meg, hogy mit jelent az igazi autós luxus!
+            </p>
+            <a class="btn btn-warning fw-bold" href="#!">Foglaljon időpontot most!</a>
+          </div>
+        </div>
+      </div>
     </div>
+    
   </div>
 
   <!--Szolgáltatások jellemzői-->
