A tanár első átnézése

--- a/html/login.html
+++ b/html/login.html
@@ -67,7 +67,7 @@
             <input
               id="login-password"
               class="form-control"
-              name="jelszó"
+              name="password"
               type="{{model.showPassword ? 'text' : 'password'}}"
               placeholder="jelszó"
               spellcheck="false"
