--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 	<!-- Application components -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+	<link rel="stylesheet" href="../components/bootstrap/5.3.3/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../components/font-awesome/6.5.2/css/all.min.css">
   	<link rel="stylesheet" href="./css/app-common.css">
   	<link rel="stylesheet" href="./css/app.css">
 </head>
@@ -19,12 +19,11 @@
 	<ui-view class="app-container"></ui-view>
 
 	<!-- Application components -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.2/angular.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.30/angular-ui-router.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment-with-locales.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.8.2/angular-sanitize.min.js"></script>
+	<script src="../components/jquery/3.7.1/js/jquery.min.js"></script>
+	<script src="../components/angular-js/1.8.2/js/angular.min.js"></script>
+	<script src="../components/angular-js/angular-ui-router/1.0.30/js/angular-ui-router.min.js"></script>
+	<script src="../components/moment/2.30.1/js/moment-with-locales.min.js"></script>
+	<script src="../components/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
 	<script src="./js/language-angular.js"></script>
 	<script src="./js/app-common.js"></script>
 	<script src="./js/app-form.js"></script>
