--- a/html/page1.html
+++ b/html/page1.html
@@ -2,7 +2,7 @@
   <!-- Heading Row -->
   <div class="row gx-4 gx-lg-5 align-items-center my-5">
     <div class="col-lg-7">
-      <!-- Home page carousel -->
+      <!-- Page1 carousel -->
       <div class="container text-center">
         <img
           ng-src="{{page1_1_pic}}"
@@ -11,7 +11,7 @@
         />
       </div>
     </div>
-
+<!-------Szolgáltatások ismertetése------->
     <div class="col-lg-5">
       <h1 class="fw-bold display-3">Szolgáltatásaink</h1>
       <p class="text-justify">
@@ -25,7 +25,7 @@
         találkozik! 🚗✨
       </p>
 
-      <!-- Keresőmező -->
+  <!-------Keresőmező ------->
       <div class="mb-3">
         <label for="searchInput" class="form-label fw-bold">Keresés</label>
         <input
@@ -37,7 +37,7 @@
         />
       </div>
 
-      <!-- Ár kategória legördülő -->
+  <!-- Ár kategória legördülő -->
       <div>
         <label for="priceSelect" class="form-label fw-bold">Árkategória</label>
         <select
@@ -54,8 +54,7 @@
   <div class="row">
     <div
       class="col-lg-4 col-md-6 mb-4"
-      ng-repeat="service in services | filter:filterServices"
-    >
+      ng-repeat="service in services | filter:filterServices">
       <div class="card h-100 bg-dark text-white">
         <div class="card-body">
           <h5 class="card-title fw-bold">{{service.services_name}}</h5>
