--- a/html/home.html
+++ b/html/home.html
@@ -1,11 +1,11 @@
 <!--------- Oldal_tartalom---->
 <div class="container px-4 px-lg-5">
 
-<!----------Fejléc_sor--------->
+  <!----------Fejléc_sor--------->
   <div class="row gx-4 gx-lg-5 align-items-center my-5">
     <div class="col-lg-7">
 
-<!-----Home_oldal_carousel------->
+    <!-----Home_oldal_carousel------->
       <div class="carousel slide" id="carouselExample" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-<!-------Bemutatkozó card ------->
+    <!-------Bemutatkozó card ------->
     <div class="col-lg-5">
       <div class="card bg-dark text-white border-0 rounded-3 h-100" 
            ng-style="cardStyle">
@@ -49,17 +49,50 @@
     </div>
   </div>
 
-<!---------Szolgáltatások jellemzői------------>
-  <div class="row gx-4 gx-lg-5">
-    <div class="col-md-4 mb-5" 
-         ng-repeat="card in cards">
-      <div class="card h-100 text-center">
-        <div class="card-body">
-          <i class="{{card.icon}} fa-3x mb-3"></i>
-          <h2 class="card-title">{{card.title}}</h2>
-          <p class="card-text text-justify">{{card.text}}</p>
+    <!---------Szolgáltatások jellemzői------------>
+    <div class="row gx-4 gx-lg-5 mb-5">
+      <div class="col-md-4" 
+          ng-repeat="card in cards">
+        <div class="card h-100 text-center">
+          <div class="card-body">
+            <i class="{{card.icon}} fa-3x mb-3"></i>
+            <h2 class="card-title">{{card.title}}</h2>
+            <p class="card-text text-justify">{{card.text}}</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+
+    <!-----------Hűség card---------------------->
+    <div>
+      <div class="card bg-dark border-0 rounded-3 h-100">
+        <div class="card-body p-0">
+          <div class="p-4">
+            <div class="row align-items-center">
+              <div class="col-lg-6">
+                <h2 class="text-warning fw-bold display-6 text-center text-lg-start mt-3">
+                  Díjazzuk a hűségét!
+                </h2>
+                <p class="text-justify text-lg-start">
+                  Legyen Ön is a Super Car Wash VIP klub tagja! 
+                  Hűséges ügyfeleinket különleges kedvezményekkel és
+                  exkluzív ajánlatokkal jutalmazzuk, hogy még élvezetesebbé 
+                  tegyük a prémium autóápolást. Ha rendszeresen nálunk mosatja
+                  autóját, VIP ügyfelünkként egyedi szolgáltatásokhoz és ajándékokhoz is 
+                  hozzáférhet. Értékeljük a bizalmát, és szeretnénk visszaadni belőle!
+                </p>
+              </div>
+              <!-- Kép szekció -->
+              <div class="col-lg-6 text-center">
+                <img
+                  ng-src="{{homepg_vip_pic}}"
+                  class="img-fluid border-primary rounded-3 mt-3"
+                  alt="Mosás">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
 </div>
