--- a/html/header.html
+++ b/html/header.html
@@ -4,6 +4,8 @@
 >
   <!-- Container -->
   <div class="container-fluid">
+
+    <img ng-src="./media/image/logo.png" class="img-fluid">
     <!-- Hamburger icon -->
     <button
       class="navbar-toggler ms-auto"
@@ -26,7 +28,6 @@
         data-bs-toggle="collapse"
         data-bs-target=".navbar-collapse.show"
       >
-        Super Car Wash
       </a>
 
       <!-- Navbar content LEFT -->
