--- a/html/footer.html
+++ b/html/footer.html
@@ -41,19 +41,20 @@
       </div>
 
       <!-- Google Maps Section -->
-      <div class="col-lg-3 col-md-4 mb-3">
+      <div class="col-lg-3 col-md-6 mb-4">
         <h5 class="fw-bold">Térkép</h5>
-        <iframe
+        <div>
+          <iframe
           ng-src="{{mapUrl}}"
-          width="400"
+          width="300"
           height="200"
           style="border: 0;"
           allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
-          class="text-center border-primary rounded-3"
-        >
-        </iframe>
+          class="text-center border-primary rounded-3">
+          </iframe>
+        </div>
       </div>
     </div>
   </div>
