--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<!-- Application components -->
 	<link rel="stylesheet" href="../components/bootstrap/5.3.3/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../components/font-awesome/6.5.2/css/all.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
   	<link rel="stylesheet" href="./css/app-common.css">
   	<link rel="stylesheet" href="./css/app.css">
 </head>
