--- a/html/page1.html
+++ b/html/page1.html
@@ -56,19 +56,28 @@
 
   <!-- Szolgáltatások card-ok -->
   <div class="row">
-    <div
-      class="col-lg-4 col-md-6 mb-4"
-      ng-repeat="service in services | filter:filterServices">
-      <div class="card h-100 bg-dark text-white">
-        <div class="card-body">
+    <div class="col-lg-4 col-md-6 mb-4" ng-repeat="service in services | filter:filterServices">
+      <div class="card h-100 bg-dark text-white d-flex flex-column">
+  
+        <!-- Kártya szolgáltatás képek -->
+        <div class="ratio ratio-4x3 p-2">
+          <img ng-src="{{service.image}}?v={{$index}}" 
+               class="card-img-top img-fluid object-fit-cover" 
+               alt="{{service.services_name}}">
+        </div>
+  
+        <!-- Kártya törzs -->
+        <div class="card-body d-flex flex-column justify-content-between">
           <h5 class="card-title fw-bold">{{service.services_name}}</h5>
           <p class="card-text">{{service.description}}</p>
-          <p class="fw-bold text-primary">
+          <p class="fw-bold text-warning text-center">
             {{service.price | currency:'':0}} Ft
           </p>
         </div>
+  
+        <!-- Megrendelem gomb -->
         <div class="card-footer">
-          <button class="btn btn-primary w-100">Megrendelem</button>
+          <button class="btn btn-warning w-100">Megrendelem</button>
         </div>
       </div>
     </div>
