--- a/html/page1.html
+++ b/html/page1.html
@@ -1,71 +1,75 @@
 <div class="container px-4 px-lg-5">
-  <!-- Heading Row -->
+  <!-- Fej sor: Videó és Szolgáltatás bemutató kártyában -->
   <div class="row gx-4 gx-lg-5 align-items-center my-5">
-    <!-- Kép balra -->
-    <div class="col-lg-6">
-      <div class="text-center">
-        <img
-          ng-src="{{page1_1_pic}}"
-          class="img-fluid border-primary rounded-3"
-          alt="Mosás"
-        />
-      </div>
-    </div>
-    <!-- Szolgáltatások ismertetése jobbra -->
-    <div class="col-lg-6">
-      <div class="card bg-dark border-0 rounded-3 mb-4">
-        <div class="card-body">
-          <h1 class="fw-bold display-3 text-warning text-center">Szolgáltatásaink</h1>
-          <p class="text-justify">
-            Fedezd fel prémium szolgáltatásainkat! Autómosónk a legmagasabb
-            színvonalat képviseli, legyen szó külső-belső takarításról,
-            polírozásról, felni tisztításról, viaszolásról vagy kerámia bevonatról.
-            Környezetbarát tisztítószereinkkel óvjuk a természetet, miközben autód
-            ragyogó tisztaságot kap. Nálunk az ügyfél az első, szakképzett
-            kollégáink minden részletre odafigyelnek, hogy elégedetten távozz!
-            Válaszd a Super Car Wash-t, ahol a minőség és a megbízhatóság
-            találkozik! 🚗✨
-          </p>
+    <div class="col-lg-12">
+      <div class="card bg-dark text-white rounded-3 shadow-lg">
+        <div class="card-body p-4">
+          <div class="row align-items-center">
+
+            <!-- Bal oldali videó -->
+            <div class="col-lg-6 text-center">
+              <video autoplay muted loop playsinline 
+                     class="img-fluid rounded-3 shadow">
+                <source ng-src="{{videoUrl}}" type="video/mp4">
+                A böngésződ nem támogatja ezt a videólejátszót.
+              </video>
+            </div>
+
+            <!-- Jobb oldali szolgáltatás szöveg -->
+            <div class="col-lg-6">
+              <h1 class="fw-bold display-4 text-warning text-center">Szolgáltatásaink</h1>
+              <p class="text-justify">
+                Fedezd fel prémium szolgáltatásainkat! Autómosónk a legmagasabb
+                színvonalat képviseli, legyen szó külső-belső takarításról,
+                polírozásról, felni tisztításról, viaszolásról vagy kerámia bevonatról.
+                Környezetbarát tisztítószereinkkel óvjuk a természetet, miközben autód
+                ragyogó tisztaságot kap. Nálunk az ügyfél az első, szakképzett
+                kollégáink minden részletre odafigyelnek, hogy elégedetten távozz!
+                Válaszd a Super Car Wash-t, ahol a minőség és a megbízhatóság találkozik! 🚗✨
+              </p>
+
+              <!-- Keresőmező -->
+              <div class="mb-3">
+                <label for="searchInput" class="form-label fw-bold text-warning">Keresés</label>
+                <input
+                  type="text"
+                  id="searchInput"
+                  class="form-control"
+                  placeholder="Keresés..."
+                  ng-model="searchText">
+              </div>
+
+              <!-- Ár kategória legördülő -->
+              <div class="mb-4">
+                <label for="priceSelect" class="form-label fw-bold text-warning">Árkategória</label>
+                <select
+                  id="priceSelect"
+                  class="form-select"
+                  ng-model="priceFilter"
+                  ng-options="category.value as category.label for category in priceCategories">
+                </select>
+              </div>
+
+            </div>
+
+          </div>
         </div>
-      </div>
-
-      <!-- Keresőmező -->
-      <div class="mb-3">
-        <label for="searchInput" class="form-label fw-bold text-warning">Keresés</label>
-        <input
-          type="text"
-          id="searchInput"
-          class="form-control"
-          placeholder="Keresés..."
-          ng-model="searchText"
-        />
-      </div>
-
-      <!-- Ár kategória legördülő -->
-      <div class="mb-4">
-        <label for="priceSelect" class="form-label fw-bold text-warning">Árkategória</label>
-        <select
-          id="priceSelect"
-          class="form-select"
-          ng-model="priceFilter"
-          ng-options="category.value as category.label for category in priceCategories"
-        ></select>
       </div>
     </div>
   </div>
 
-  <!-- Szolgáltatások card-ok -->
+  <!-- Szolgáltatások kártyák -->
   <div class="row">
     <div class="col-lg-4 col-md-6 mb-4" ng-repeat="service in services | filter:filterServices">
       <div class="card h-100 bg-dark text-white d-flex flex-column">
-  
+
         <!-- Kártya szolgáltatás képek -->
-        <div class="ratio ratio-4x3 p-2">
+        <div class="ratio ratio-4x3">
           <img ng-src="{{service.image}}?v={{$index}}" 
-               class="card-img-top img-fluid object-fit-cover" 
+               class="img-fluid object-fit-cover w-100 h-100" 
                alt="{{service.services_name}}">
         </div>
-  
+
         <!-- Kártya törzs -->
         <div class="card-body d-flex flex-column justify-content-between">
           <h5 class="card-title fw-bold">{{service.services_name}}</h5>
@@ -74,7 +78,7 @@
             {{service.price | currency:'':0}} Ft
           </p>
         </div>
-  
+
         <!-- Megrendelem gomb -->
         <div class="card-footer">
           <button class="btn btn-warning w-100">Megrendelem</button>
