szolgáltatások oldal caroussel cardok + annak a js.

--- a/html/home.html
+++ b/html/home.html
@@ -1,14 +1,14 @@
 <!--------- Oldal_tartalom---->
 <div class="container px-4 px-lg-5">
 
-  <!---------- Fejléc_sor (Videó + Szöveg egy kártyában) --------->
+<!---------- Fejléc_sor (Videó + Szöveg egy kártyában) --------->
   <div class="row gx-4 gx-lg-5 align-items-center my-5">
     <div class="col-lg-12">
       <div class="card bg-dark text-white rounded-3 shadow-lg">
         <div class="card-body p-4">
           <div class="row align-items-center">
             
-            <!-- Bal oldali videó -->
+<!--------- Bal oldali videó -------------------------->
             <div class="col-lg-7 text-center">
               <video autoplay muted loop playsinline 
                      class="img-fluid rounded-3 shadow ">
@@ -17,7 +17,7 @@
               </video>
             </div>
 
-            <!-- Jobb oldali szöveg -->
+<!------------------- Jobb oldali szöveg ------------------>
             <div class="col-lg-5">
               <h1 class="fw-bold display-5 text-warning text-center">
                 Super Car Wash
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <!--------- Szolgáltatás cardok ---------->
+ <!--------- Szolgáltatás cardok -------------------->
   <div class="row gx-4 gx-lg-5 mb-5">
     <div class="col-md-4" ng-repeat="card in cards">
       <div class="card h-100 text-center border shadow-lg order border-warning border-1">
@@ -54,7 +54,7 @@
     </div>
   </div>
 
-  <!----------- Hűség card ---------------------->
+  <!----------------- Hűség card ---------------------->
   <div>
     <div class="card bg-dark border-0 rounded-3 h-100">
       <div class="card-body p-0">
@@ -73,7 +73,7 @@
                 hozzáférhet. Értékeljük a bizalmát, és szeretnénk visszaadni belőle!
               </p>
             </div>
-            <!-- Kép szekció -->
+<!----------------- VIP Kép szekció ------------------------>
             <div class="col-lg-6 text-center">
               <img
                 ng-src="{{homepg_vip_pic}}"
