--- a/html/login.html
+++ b/html/login.html
@@ -39,16 +39,13 @@
               ng-model="model.email"
               ng-pattern="/^([a-z0-9_.+-])+\@(([a-z0-9-])+\.)+([a-z0-9]{2,4})+$/"
               ng-disable-space
-              ng-clear-icon
-            >
+              ng-clear-icon>
           </div>
           <div
-            class="col-1 d-flex align-items-center justify-content-start ps-1"
-          >
+            class="col-1 d-flex align-items-center justify-content-start ps-1">
             <span
               class="fw-bolder text-success"
-              ng-class="{'invisible': loginForm.email.$invalid}"
-            >
+              ng-class="{'invisible': loginForm.email.$invalid}">
               &check;
             </span>
           </div>
@@ -58,8 +55,7 @@
         <div class="row mb-2">
           <label
             for="login-password"
-            class="col-form-label col-12 col-md-5 text-md-end"
-          >
+            class="col-form-label col-12 col-md-5 text-md-end">
             <i class="fa-solid fa-star fa-2xs text-danger"></i>
             <i class="fa-solid fa-key me-1"></i>
             <span class="text-capitalize">jelszó:</span>
@@ -80,16 +76,13 @@
               ng-model="model.password"
               ng-pattern="/^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,20}$/"
               ng-disable-space
-              ng-clear-icon
-            >
+              ng-clear-icon>
           </div>
           <div
-            class="col-1 d-flex align-items-center justify-content-start ps-1"
-          >
+            class="col-1 d-flex align-items-center justify-content-start ps-1">
             <span
               class="fw-bolder text-success"
-              ng-class="{'invisible': loginForm.password.$invalid}"
-            >
+              ng-class="{'invisible': loginForm.password.$invalid}">
               &check;
             </span>
             <span
@@ -97,8 +90,7 @@
               data-bs-custom-class="custom-tooltip"
               data-bs-html="true"
               data-bs-title="&lt;p class='my-1'>6-20 characters&lt;/br>
-																&lt;small>(contains uppercase, lowercase letters and numbers)&lt;/small>&lt;/p>"
-            >
+																&lt;small>(contains uppercase, lowercase letters and numbers)&lt;/small>&lt;/p>">
               <i class="fa-solid fa-circle-info text-primary ms-2"></i>
             </span>
           </div>
@@ -115,8 +107,7 @@
               class="form-check-input"
               type="checkbox"
               ng-init="model.showPassword=false"
-              ng-model="model.showPassword"
-              >
+              ng-model="model.showPassword">
             <label for="login-showPassword" 
                    class="form-check-label ms-1">
               Jelszó mutat
@@ -130,8 +121,7 @@
             type="button"
             class="btn btn-primary w-auto px-5 me-3 text-capitalize"
             ng-disabled="loginForm.$invalid"
-            ng-click="methods.login()"
-          >
+            ng-click="methods.login()">
             Bejelentkezés
           </button>
         </div>
