--- a/html/page2.html
+++ b/html/page2.html
@@ -5,7 +5,7 @@
           <div class="card-body p-5">
             <div class="row align-items-center">
               
-              <!-- Bal oldali szöveges rész -->
+<!-- Bal oldali szöveges rész -------------------->
               <div class="col-lg-6">
                 <h2 class="text-warning fw-bold display-5 text-center text-lg-start mb-4">
                   Kik vagyunk...?
@@ -30,7 +30,7 @@
                 </p>
               </div>
   
-              <!-- Jobb oldali videó rész -->
+<!-- Jobb oldali videó rész----------------------->
               <div class="col-lg-6 text-center">
                 <img
                   ng-src="{{ourTeam}}"
