--- a/html/page2.html
+++ b/html/page2.html
@@ -1,44 +1,39 @@
-<div class="container px-4 px-lg-5">
-  <div class="row gx-4 gx-lg-5 align-items-center my-5">
+<div class="container px-4 px-lg-5 my-5">
+  <div class="row gx-4 gx-lg-5 align-items-center">
     <div class="col-lg-12">
       <div class="card bg-dark border-0 rounded-3 shadow-lg">
         <div class="card-body p-5">
           <div class="row align-items-center">
-            <!-- Bal oldali szöveges rész -------------------->
+
+<!-------------------Bal oldali szöveg-------------->
+
             <div class="col-lg-6">
-              <h2
-                class="text-warning fw-bold display-5 text-center text-lg-start mb-4"
-              >
-                Kik vagyunk...?
-              </h2>
+              <h2 class="text-warning fw-bold display-5 text-center text-lg-start mb-4">Kik vagyunk...?</h2>
               <p class="text-white text-justify">
-                Ismerd meg a Super Car Wash történetét! A Super Car Wash több
-                mint 10 éve kezdte meg működését egy kis családi
-                vállalkozásként.
+                Ismerd meg a Super Car Wash történetét! A Super Car Wash több mint 10 éve 
+                kezdte meg működését egy kis családi vállalkozásként.
               </p>
               <p class="text-white text-justify">
-                Szenvedélyünk az autók iránt és az igényes tisztítás iránti
-                elkötelezettségünk segített minket abban, hogy folyamatosan
+                Szenvedélyünk az autók iránt és az igényes tisztítás iránti 
+                elkötelezettségünk segített minket abban, hogy folyamatosan 
                 fejlődjünk és bővítsük szolgáltatásainkat.
               </p>
               <p class="text-white text-justify">
-                Az évek során ügyfeleink bizalmának és elégedettségének
-                köszönhetően mára egy jól ismert, megbízható vállalkozássá
-                váltunk, amely prémium minőségű szolgáltatásokat kínál.
+                Az évek során ügyfeleink bizalmának és elégedettségének 
+                köszönhetően mára egy jól ismert, megbízható vállalkozássá váltunk.
               </p>
               <p class="text-white text-justify">
-                Válaszd a Super Car Wash-t, ahol a családi értékek, a minőség és
-                a megbízhatóság találkozik! 🚗✨
+                Válaszd a Super Car Wash-t, ahol a családi értékek,
+                 a minőség és a megbízhatóság találkozik! 🚗✨
               </p>
             </div>
 
-            <!-- Jobb oldali videó rész----------------------->
+<!-----------------Csapat kép-------------------->
+
             <div class="col-lg-6 text-center">
-              <img
-                ng-src="{{ourTeam}}"
-                class="img-fluid border-primary rounded-3"
-                alt="ourTeam"
-              />
+              <img ng-src="{{ourTeam_img}}" 
+                   class="img-fluid border-primary rounded-3" 
+                   alt="ourTeam">
             </div>
           </div>
         </div>
@@ -46,182 +41,193 @@
     </div>
   </div>
 
-  <div class="container px-4 px-lg-5 my-5">
-    <div class="row gx-4 gx-lg-5 justify-content-center">
-      <div class="col-lg-8">
-        <div class="card bg-dark text-white rounded-3 shadow-lg">
-          <div class="card-body p-5">
-            <h2 class="text-warning fw-bold text-center mb-4">
-              Ossza meg velünk véleményét!
-            </h2>
-            <form name="feedbackForm" ng-submit="submitFeedback()" novalidate>
-              <!-- Név -->
-              <div class="mb-3">
-                <label for="name" class="form-label"> Név </label>
-                <input
-                  type="text"
-                  id="name"
-                  class="form-control"
-                  ng-model="feedback.name"
-                  placeholder="Írja be a nevét..."
-                  required
-                />
-              </div>
+<!------------------Vélemény és Carousel---------->
 
-              <!-- Nem -->
-              <div class="mb-3">
-                <label class="form-label"> Nem </label>
+  <div class="row gx-4 gx-lg-5 justify-content-center mt-5">
+    <div class="col-lg-12">
+      <div class="card bg-dark text-white rounded-3 shadow-lg">
+        <div class="card-body p-5">
+          <div class="row align-items-stretch">
 
-                <br />
+<!--------------Bal oldali űrlap----------------->
 
-                <div class="form-check form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    id="male"
-                    value="Férfi"
-                    ng-model="feedback.gender"
-                    required
-                  />
-                  <label class="form-check-label" for="male">Férfi</label>
+            <div class="col-lg-6 d-flex flex-column justify-content-between">
+              <h2 class="text-warning fw-bold mb-4">
+                Ossza meg velünk véleményét!
+              </h2>
+              <form name="feedbackForm" 
+                    ng-submit="submitFeedback()" 
+                    novalidate class="h-100 d-flex flex-column justify-content-between">
+
+<!---------------Név----------------------------->
+
+                <div class="mb-3">
+                  <label for="name" 
+                         class="form-label">
+                         Név
+                    </label>
+                  <input type="text" 
+                         id="name" 
+                         class="form-control" 
+                         ng-model="feedback.name" 
+                         required>
                 </div>
-                <div class="form-check form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    id="female"
-                    value="Nő"
-                    ng-model="feedback.gender"
-                    required
-                  />
-                  <label class="form-check-label" for="female"> Nő </label>
+
+<!---------------Nem választó-------------------->
+
+                <div class="mb-3">
+                  <label class="form-label">
+                    Nem
+                  </label>
+
+                  <br>
+
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" 
+                           type="radio" 
+                           ng-model="feedback.gender" 
+                           value="M"> 
+                    <label class="form-check-label">
+                      Férfi
+                    </label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" 
+                           type="radio" 
+                           ng-model="feedback.gender" 
+                           value="F"> 
+                    <label class="form-check-label">
+                      Nő
+                    </label>
+                  </div>
                 </div>
-              </div>
 
-              <!-- Kor -->
-              <div class="mb-3">
-                <label for="age" class="form-label"> Kor </label>
-                <input
-                  type="number"
-                  id="age"
-                  class="form-control"
-                  ng-model="feedback.age"
-                  placeholder="Adja meg az életkorát..."
-                  min="1"
-                  required
-                />
-              </div>
+<!----------------Kor-------------------------->
 
-              <!-- Vélemény -->
-              <div class="mb-3">
-                <label for="comment" class="form-label"> Vélemény </label>
-                <textarea
-                  id="comment"
-                  class="form-control"
-                  ng-model="feedback.comment"
-                  placeholder="Írja le véleményét..."
-                  rows="4"
-                  required
-                >
-                </textarea>
-              </div>
+                <div class="mb-3">
+                  <label for="age" 
+                         class="form-label">
+                         Kor
+                    </label>
+                  <input type="number" 
+                         id="age" 
+                         class="form-control" 
+                         ng-model="feedback.age" 
+                         min="1" 
+                         required>
+                </div>
 
-              <!-- Csillagos értékelés -->
-              <div class="mb-3">
-                <label class="form-label"> Értékelés </label>
+<!----------------Értékelés-------------------->
 
-                <br />
+                <div class="mb-3">
+                  <label>
+                    Értékelés
+                  </label>
 
-                <span
-                  ng-repeat="star in [1,2,3,4,5]"
-                  ng-click="feedback.rating = star"
-                  class="fa fa-star"
-                  ng-class="{'checked': star <= feedback.rating}"
-                  style="cursor: pointer"
-                >
-                </span>
-              </div>
+                  <br>
 
-              <!-- Beküldés gomb -->
-              <button
-                type="submit"
-                class="btn btn-warning w-100"
-                ng-disabled="feedbackForm.$invalid"
-              >
-                Vélemény elküldése
-              </button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+                  <span ng-repeat="star in [1,2,3,4,5]" 
+                        ng-click="feedback.rating = star" 
+                        class="fa fa-star" 
+                        ng-class="{'checked': star <= feedback.rating}" 
+                        style="cursor: pointer;">
+                    </span>
+                </div>
 
-  <!-- Vélemények Carousel -->
-  <div
-    id="feedbackCarousel"
-    class="carousel slide my-5"
-    data-bs-ride="carousel"
-    data-bs-wrap="true"
-    ng-if="feedbacks.length > 0"
-  >
-    <div class="carousel-inner">
-      <div
-        class="carousel-item"
-        ng-class="{'active': $index === 0}"
-        ng-repeat="chunk in chunkedFeedbacks"
-      >
-        <div class="row">
-          <div
-            class="col-md-4 d-flex align-items-stretch"
-            ng-repeat="fb in chunk"
-          >
-            <div class="card bg-dark text-white mb-3 h-100 shadow">
-              <div
-                class="card-body d-flex flex-column justify-content-between text-center"
-              >
-                <!-- Nem alapú kép -->
-                <img
-                  ng-src="{{fb.gender === 'M' ? './media/image/male-blank.webp' : './media/image/female-blank.webp'}}"
-                  alt="Nem"
-                  width="100"
-                  height="100"
-                  class="rounded-circle mb-3"
-                />
+<!---------------Vélemény------------------------>
 
-                <h5 class="card-title">{{fb.name}} ({{fb.age}} év)</h5>
-                <p class="card-text flex-grow-1">{{fb.feedback}}</p>
+                <div class="mb-3">
+                  <label for="comment" 
+                         class="form-label">
+                         Vélemény
+                    </label>
+                  <textarea id="comment" 
+                            class="form-control" 
+                            ng-model="feedback.comment" 
+                            rows="4" 
+                            required>
+                    </textarea>
+                </div>
 
-                <!-- Csillagos értékelés -->
-                <p class="fw-bold text-warning">
-                  <span ng-repeat="n in getStars(fb.point) track by $index"
-                    >★</span
-                  >
-                </p>
+                <button type="submit" 
+                        class="btn btn-warning w-100">
+
+                        Vélemény elküldése
+                  </button>
+              </form>
+            </div>
+
+<!-----------------elégedett kép--------------->
+            <div class="col-lg-6 d-flex flex-column justify-content-between text-center">
+              <!-- Kép -->
+              <img ng-src="{{satisfied_img}}" 
+                   class="img-fluid rounded-3 shadow-lg mb-4" 
+                   style="max-height: 250px; object-fit: cover;">
+
+<!-----------------Carousel--------.----------->
+
+              <div id="feedbackCarousel" 
+                   class="carousel slide" 
+                   data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item" 
+                       ng-class="{'active': $index === 0}" 
+                       ng-repeat="fb in feedbacks">
+                    <div class="card bg-dark text-white shadow-lg h-100" 
+                         style="min-height: 300px;">
+                      <div class="card-body d-flex flex-column justify-content-between">
+                        
+<!----------------Név és nem ikon-------------------->
+
+                        <div class="d-flex align-items-center mb-3">
+                          <img ng-src="{{fb.gender === 'M' ? './media/image/male-blank.webp' : './media/image/female-blank.webp'}}" 
+                               width="50" 
+                               height="50" 
+                               class="rounded-circle me-3 border border-light">
+                          <h5 class="card-title m-0">{{fb.name}} ({{fb.age}} év) 
+                            <span ng-repeat="n in getStars(fb.point)" 
+                            class="text-warning">
+                            ★
+                            </span>
+                          </h5>
+                        </div>
+
+<!----------------Görgethető vélemény------------------>
+                        <div class="flex-grow-1 bg-secondary text-white p-3 rounded overflow-auto">
+                          <p class="card-text m-0">{{fb.feedback}}</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+<!----------------Navigáció----------------------------->
+
+                <button class="carousel-control-prev" 
+                        type="button" 
+                        data-bs-target="#feedbackCarousel" 
+                        data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" 
+                        aria-hidden="true"></span>
+                  <span class="visually-hidden">
+                    Előző
+                  </span>
+                </button>
+                <button class="carousel-control-next" 
+                        type="button" 
+                        data-bs-target="#feedbackCarousel" 
+                        data-bs-slide="next">
+                  <span class="carousel-control-next-icon"
+                        aria-hidden="true"></span>
+                  <span class="visually-hidden">
+                    Következő
+                  </span>
+                </button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
-    <!-- Navigációs nyilak -->
-    <button
-      class="carousel-control-prev"
-      type="button"
-      data-bs-target="#feedbackCarousel"
-      data-bs-slide="prev"
-    >
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Előző</span>
-    </button>
-    <button
-      class="carousel-control-next"
-      type="button"
-      data-bs-target="#feedbackCarousel"
-      data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Következő</span>
-    </button>
   </div>
 </div>
