login és registration felület készítése formázása

--- a/html/page1.html
+++ b/html/page1.html
@@ -15,7 +15,7 @@
                 playsinline
                 class="img-fluid rounded-3 shadow">
                 <source ng-src="{{videoUrl}}" 
-                        type="video/mp4" />
+                        type="video/mp4">
 
                 A böngésződ nem támogatja ezt a videólejátszót.
 
