--- a/html/profile.html
+++ b/html/profile.html
@@ -449,8 +449,7 @@
             data-bs-target="#modalRequest"
             class="mt-2 btn btn-primary w-auto px-5 me-3 text-capitalize"
             ng-disabled="profileForm.$invalid || !isModified"
-            ng-click="methods.httpRequest()"
-          >
+            ng-click="methods.httpRequest()">
             Mentés
           </button>
         </div>
