--- a/html/footer.html
+++ b/html/footer.html
@@ -8,9 +8,15 @@
       <div class="col-lg-3 col-md-6 mb-4">
         <h5 class="fw-bold">{{about.title}}</h5>
         <div class="d-flex justify-content-start align-items-center flex-wrap">
-          <i ng-repeat="icon in about.icons" class="{{icon}} fa-2x me-3"></i>
+          <a ng-repeat="icon in about.icons" 
+             ng-href="{{icon.url}}" 
+             class="text-decoration-none text-white me-3" 
+             target="_blank">
+            <i class="{{icon.class}} fa-2x"></i>
+          </a>
         </div>
       </div>
+      
 
       <!-- Links section -->
       <div class="col-lg-3 col-md-6 mb-4">
