--- a/html/home.html
+++ b/html/home.html
@@ -47,7 +47,7 @@
   <div class="row gx-4 gx-lg-5 mb-5">
     <div class="col-md-4" 
          ng-repeat="card in cards">
-      <div class="card h-100 text-center border shadow-lg order border-warning border-1">
+      <div class="card h-100 text-center border shadow-lg order">
         <div class="card-body">
           <i class="{{card.icon}} fa-3x mb-3"></i>
           <h2 class="card-title">{{card.title}}</h2>
