--- a/html/login.html
+++ b/html/login.html
@@ -1,72 +1,52 @@
-<!--------- Oldal_tartalom---->
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7">
-
-<!------Bejelentkezés_cím------>
-      <div class="row my-4">
-        <h3 class="text-center">
+<div class="container vh-100 d-flex justify-content-center align-items-center">
+  <div class="card shadow-lg text-white w-75" style="border-radius: 15px; overflow: hidden;">
+    <div class="row g-0">
+      <!-- Login Form -->
+      <div 
+        class="col-12 p-5 d-flex flex-column justify-content-center"
+        ng-style="{'background-image': 'url(' + login_bg + ')', 
+                   'background-size': 'cover', 
+                   'background-position': 'center', 
+                   'background-repeat': 'no-repeat'}">
+        <h3 class="text-center mb-4 text-white">
           <i class="fa-solid fa-right-to-bracket"></i>
-          <span class="text-capitalize text-small-caps ms-2">
-            bejelentkezés
-          </span>
-          <h1>{{aaaaa}}</h1>
+          <span class="text-capitalize ms-2">Bejelentkezés</span>
         </h3>
-      </div>
 
-<!------Bejelentkezés_form-------->
-      <form name="loginForm" novalidate>
-<!--------------Email-------------->
-        <div class="row mb-3">
-          <label
-            for="login-email"
-            class="col-form-label col-12 col-md-5 text-md-end">
-            <i class="fa-solid fa-star fa-2xs text-danger"></i>
-            <i class="fa-solid fa-envelope me-1"></i>
-            <span class="text-capitalize">e-mail:</span>
-          </label>
-          <div class="col-11 col-md-6 position-relative">
+        <form name="loginForm" novalidate>
+          <!-- Email -->
+          <div class="mb-3">
+            <label for="login-email" class="form-label text-white">
+              <i class="fa-solid fa-star fa-2xs text-danger"></i>
+              <i class="fa-solid fa-envelope me-1"></i> E-mail:
+            </label>
             <input
               id="login-email"
-              class="form-control"
+              class="form-control bg-dark text-white border-secondary"
               name="email"
               type="text"
-              placeholder="e-mail"
+              placeholder="E-mail"
               spellcheck="false"
               autocomplete="off"
               required
               maxlength="50"
               ng-model="model.email"
               ng-pattern="/^([a-z0-9_.+-])+\@(([a-z0-9-])+\.)+([a-z0-9]{2,4})+$/"
-              ng-disable-space
-              ng-clear-icon>
+              ng-disable-space>
           </div>
-          <div
-            class="col-1 d-flex align-items-center justify-content-start ps-1">
-            <span
-              class="fw-bolder text-success"
-              ng-class="{'invisible': loginForm.email.$invalid}">
-              &check;
-            </span>
-          </div>
-        </div>
 
-<!----------Jelszó------------>
-        <div class="row mb-2">
-          <label
-            for="login-password"
-            class="col-form-label col-12 col-md-5 text-md-end">
-            <i class="fa-solid fa-star fa-2xs text-danger"></i>
-            <i class="fa-solid fa-key me-1"></i>
-            <span class="text-capitalize">jelszó:</span>
-          </label>
-          <div class="col-11 col-md-6 position-relative">
+          <!-- Jelszó -->
+          <div class="mb-3">
+            <label for="login-password" class="form-label text-white">
+              <i class="fa-solid fa-star fa-2xs text-danger"></i>
+              <i class="fa-solid fa-key me-1"></i> Jelszó:
+            </label>
             <input
               id="login-password"
-              class="form-control"
+              class="form-control bg-dark text-white border-secondary"
               name="password"
               type="{{model.showPassword ? 'text' : 'password'}}"
-              placeholder="jelszó"
+              placeholder="Jelszó"
               spellcheck="false"
               autocomplete="off"
               required
@@ -75,57 +55,34 @@
               ng-init="model.password=null"
               ng-model="model.password"
               ng-pattern="/^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,20}$/"
-              ng-disable-space
-              ng-clear-icon>
+              ng-disable-space>
           </div>
-          <div
-            class="col-1 d-flex align-items-center justify-content-start ps-1">
-            <span
-              class="fw-bolder text-success"
-              ng-class="{'invisible': loginForm.password.$invalid}">
-              &check;
-            </span>
-            <span
-              data-bs-toggle="tooltip"
-              data-bs-custom-class="custom-tooltip"
-              data-bs-html="true"
-              data-bs-title="&lt;p class='my-1'>6-20 characters&lt;/br>
-																&lt;small>(contains uppercase, lowercase letters and numbers)&lt;/small>&lt;/p>">
-              <i class="fa-solid fa-circle-info text-primary ms-2"></i>
-            </span>
-          </div>
-        </div>
 
-<!--------------Mutat/elrejt_jelszó--------------->
-        <div class="row mb-4">
-          <div
-            class="col-form-label d-none d-md-block col-md-5 text-md-end"
-          ></div>
-          <div class="col-12 col-md-7">
+          <!-- Mutat/elrejt jelszó -->
+          <div class="form-check mb-3">
             <input
               id="login-showPassword"
               class="form-check-input"
               type="checkbox"
               ng-init="model.showPassword=false"
               ng-model="model.showPassword">
-            <label for="login-showPassword" 
-                   class="form-check-label ms-1">
+            <label for="login-showPassword" class="form-check-label text-white">
               Jelszó mutat
             </label>
           </div>
-        </div>
 
-<!-----------Bejelentkezés_gomb--------------->
-        <div class="row justify-content-end">
-          <button
-            type="button"
-            class="btn btn-primary w-auto px-5 me-3 text-capitalize"
-            ng-disabled="loginForm.$invalid"
-            ng-click="methods.login()">
-            Bejelentkezés
-          </button>
-        </div>
-      </form>
+          <!-- Bejelentkezés gomb -->
+          <div class="text-center">
+            <button
+              type="button"
+              class="btn btn-warning px-5"
+              ng-disabled="loginForm.$invalid"
+              ng-click="methods.login()">
+              Bejelentkezés
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </div>
