profile html és idópont foglalás készítése

--- a/html/login.html
+++ b/html/login.html
@@ -1,5 +1,5 @@
 <div class="container vh-100 d-flex justify-content-center align-items-center">
-  <div class="card shadow-lg text-white w-75" style="border-radius: 15px; overflow: hidden;">
+  <div class="card shadow-lg text-white col-md-6 col-lg-4" style="border-radius: 15px; overflow: hidden;">
     <div class="row g-0">
       <!-- Login Form -->
       <div 
@@ -22,7 +22,7 @@
             </label>
             <input
               id="login-email"
-              class="form-control bg-dark text-white border-secondary"
+              class="form-control bg-dark text-white border-secondary "
               name="email"
               type="text"
               placeholder="E-mail"
