--- a/html/page1.html
+++ b/html/page1.html
@@ -105,7 +105,7 @@
                   {{service.price | currency:'':0}} Ft
                 </p>
                 <button class="btn btn-warning w-100">
-                  Megrendelem
+                  Időpontot foglalok!
                 </button>
               </div>
             </div>
