--- a/html/profile.html
+++ b/html/profile.html
@@ -1,459 +1,83 @@
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7">
-      <!-- Title -->
-      <div class="row mb-4">
-        <h3 class="text-center">
-          <i class="fa-regular fa-address-card"></i>
-          <span class="text-capitalize text-small-caps ms-2"> profil </span>
-        </h3>
+<div class="container vh-100 d-flex align-items-center">
+  <div class="card shadow-lg" style="width: 100%; height: 90%; display: flex; flex-direction: row; border-radius: 15px;">
+    <!-- Sidebar -->
+    <div class="p-4 bg-dark border-end" style="width: 250px; border-radius: 15px 0 0 15px;">
+      <ul class="list-unstyled">
+        <li class="mb-3 pointer py-2 px-3" ng-click="selectedSection = 'personal'" 
+            ng-class="{'bg-warning text-dark rounded-3': selectedSection === 'personal'}">
+          <i class="fa-solid fa-user me-2"></i> Személyes adatok
+        </li>
+        <li class="mb-3 pointer py-2 px-3" ng-click="selectedSection = 'schedule'" 
+            ng-class="{'bg-warning text-dark rounded-3': selectedSection === 'schedule'}">
+          <i class="fa-solid fa-clock me-2"></i> Időpontfoglalás
+        </li>
+        <li class="mb-3 pointer py-2 px-3" ng-click="selectedSection = 'myBookings'" 
+            ng-class="{'bg-warning text-dark rounded-3': selectedSection === 'myBookings'}">
+          <i class="fa-solid fa-calendar-check me-2"></i> Foglalásaim
+        </li>
+      </ul>
+    </div>
+
+    <!-- Main Content -->
+    <div class="p-4" style="flex-grow: 1;">
+      <!-- Időpontfoglalás -->
+      <div ng-if="selectedSection === 'schedule'">
+        <h3>Időpontfoglalás</h3>
+
+        <!-- Csomagok -->
+        <div class="mb-4">
+          <label for="package" class="form-label">Válassz egy csomagot:</label>
+          <select 
+            id="package" 
+            class="form-select" 
+            ng-model="selectedPackage">
+            <option value="" disabled selected>Válassz egy csomagot</option>
+            <option ng-repeat="package in packages" value="{{ package.id }}">
+              {{ package.name }} - {{ package.price }} Ft
+            </option>
+          </select>
+        </div>
+
+        <!-- Naptár -->
+        <div class="mb-3">
+          <label for="date">Válassz egy dátumot:</label>
+          <input 
+          id="date" 
+          type="date" 
+          class="form-control" 
+          ng-model="selectedDate" 
+          ng-change="logDate()">
+        
+        <p>Kiválasztott dátum: {{ selectedDate }}</p>
+        </div>
+
+        <!-- Időpontok -->
+        <div ng-if="timeSlots.length > 0">
+          <h4>Elérhető időpontok:</h4>
+          <div class="d-flex flex-wrap gap-2">
+            <button
+              ng-repeat="time in timeSlots"
+              ng-click="selectTimeSlot(time)"
+              class="btn"
+              ng-class="{'btn-outline-primary': selectedTime !== time && !bookedSlots.includes(time), 
+                        'btn-primary': selectedTime === time, 
+                        'btn-danger': bookedSlots.includes(time)}"
+              ng-disabled="bookedSlots.includes(time)">
+              {{ time }}
+            </button>
+          </div>
+
+          <!-- Foglalás gomb -->
+          <div class="mt-4">
+            <button 
+              class="btn btn-success" 
+              ng-disabled="!selectedTime || !selectedPackage" 
+              ng-click="confirmAppointment()">
+              Foglalás
+            </button>
+          </div>
+        </div>
       </div>
-
-      <!-- Form -->
-      <form name="profileForm" novalidate>
-        <!-- Identifier/Type -->
-        <div class="row mb-3">
-          <label for="profile-id" class="col-form-label col-md-4 text-md-end">
-            <i class="fa-solid fa-fingerprint me-1"></i>
-            <span class="text-capitalize">azonosító:</span>
-          </label>
-          <div class="col-11 col-md-7 position-relative">
-            <div class="row">
-              <div class="col-md-5">
-                <input
-                  id="profile-id"
-                  class="form-control form-control-disabled"
-                  name="id"
-                  type="text"
-                  maxlength="300"
-                  ng-model="$root.user.id"
-                  disabled
-                />
-              </div>
-              <div class="col-md-7">
-                <div class="row mt-3 mt-md-0">
-                  <label
-                    for="profile-type"
-                    class="col-form-label col-md-6 text-md-end"
-                  >
-                    <i class="fa-solid fa-location-crosshairs me-1"></i>
-                    <span class="text-capitalize">típus:</span>
-                  </label>
-                  <div class="col-md-6">
-                    <input
-                      id="profile-type"
-                      class="form-control form-control-disabled"
-                      name="type"
-                      type="text"
-                      maxlength="300"
-                      ng-model="$root.user.type"
-                      disabled
-                    />
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Email -->
-        <div class="row mb-3">
-          <label
-            for="profile-email"
-            class="col-form-label col-12 col-md-4 text-md-end"
-          >
-            <i class="fa-solid fa-envelope me-1"></i>
-            <span class="text-capitalize">e-mail:</span>
-          </label>
-          <div class="col-11 col-md-7 position-relative">
-            <input
-              id="profile-email"
-              class="form-control form-control-disabled"
-              name="email"
-              type="text"
-              ng-model="$root.user.email"
-              disabled
-            />
-          </div>
-        </div>
-
-        <!-- First name -->
-        <div class="row mb-3">
-          <label
-            for="profile-first_name"
-            class="col-form-label col-12 col-md-4 text-md-end"
-          >
-            <i class="fa-solid fa-user fa-2xl me-1"></i>
-            <i class="fa-solid fa-star fa-2xs text-danger"></i>
-            <span class="text-capitalize">Keresztnév:</span>
-          </label>
-          <div class="col-11 col-md-7 position-relative">
-            <input
-              id="profile-first_name"
-              class="form-control"
-              name="first_name"
-              type="text"
-              placeholder="Keresztnév"
-              spellcheck="false"
-              autocomplete="off"
-              required
-              maxlength="100"
-              ng-model="$root.user.first_name"
-              ng-clear-icon
-            />
-          </div>
-          <div
-            class="col-1 d-flex align-items-center justify-content-start ps-1"
-          >
-            <span
-              class="fw-bolder text-success"
-              ng-class="{'invisible': profileForm.first_name.$invalid}"
-            >
-              &check;
-            </span>
-          </div>
-        </div>
-
-        <!-- Middle name -->
-        <div class="row mb-3">
-          <label
-            for="profile-middle_name"
-            class="col-form-label col-12 col-md-4 text-md-end"
-          >
-            <span class="text-capitalize">Középső név:</span>
-          </label>
-          <div class="col-11 col-md-7 position-relative">
-            <input
-              id="profile-middle_name"
-              class="form-control"
-              name="middle_name"
-              type="text"
-              placeholder="Középső név"
-              spellcheck="false"
-              autocomplete="off"
-              maxlength="100"
-              ng-model="$root.user.middle_name"
-              ng-clear-icon
-            />
-          </div>
-        </div>
-
-        <!-- Last name -->
-        <div class="row mb-3">
-          <label
-            for="profile-last_name"
-            class="col-form-label col-12 col-md-4 text-md-end"
-          >
-            <i class="fa-solid fa-star fa-2xs text-danger"></i>
-            <span class="text-capitalize">Vezetéknév:</span>
-          </label>
-          <div class="col-11 col-md-7 position-relative">
-            <input
-              id="profile-last_name"
-              class="form-control"
-              name="last_name"
-              type="text"
-              placeholder="Vezetéknév"
-              spellcheck="false"
-              autocomplete="off"
-              required
-              maxlength="100"
-              ng-model="$root.user.last_name"
-              ng-clear-icon
-            />
-          </div>
-          <div
-            class="col-1 d-flex align-items-center justify-content-start ps-1"
-          >
-            <span
-              class="fw-bolder text-success"
-              ng-class="{'invisible': profileForm.last_name.$invalid}"
-            >
-              &check;
-            </span>
-          </div>
-        </div>
-
-        <!-- Born -->
-        <div class="row mb-3">
-          <label
-            for="profile-born"
-            class="col-form-label col-12 col-md-4 text-md-end"
-          >
-            <i class="fa-solid fa-star fa-2xs text-danger"></i>
-            <i class="fa-solid fa-calendar-days me-1"></i>
-            <span class="text-capitalize">születési idő:</span>
-          </label>
-          <div class="col-11 col-md-7 position-relative">
-            <input
-              id="profile-born"
-              class="form-control"
-              name="born"
-              type="date"
-              placeholder="2000-12-12"
-              spellcheck="false"
-              autocomplete="off"
-              max="{{helper.maxBorn}}"
-              min="{{helper.minBorn}}"
-              required
-              maxlength="300"
-              ng-model="model.born"
-              ng-disable-space
-              ng-clear-icon
-            />
-          </div>
-          <div
-            class="col-1 d-flex align-items-center justify-content-start ps-1"
-          >
-            <span
-              class="fw-bolder text-success"
-              ng-class="{'invisible': profileForm.born.$invalid}"
-            >
-              &check;
-            </span>
-            <span
-              data-bs-toggle="tooltip"
-              data-bs-custom-class="custom-tooltip"
-              data-bs-html="true"
-              data-bs-title="&lt;p class='my-1'>Csak 16 éven felülieknek!&lt;/p>"
-            >
-              <i class="fa-solid fa-circle-info text-primary ms-2"></i>
-            </span>
-          </div>
-        </div>
-
-        <!-- Gender -->
-        <fieldset class="row input-row mb-3">
-          <legend class="col-form-label col-12 col-md-4 text-md-end">
-            <i class="fa-solid fa-star fa-2xs text-danger"></i>
-            <i class="fa-solid fa-venus-mars me-1"></i>
-            <span class="text-capitalize"> neme: </span>
-          </legend>
-          <div
-            class="col-11 col-md-7 position-relative d-flex align-items-center"
-          >
-            <div
-              class="form-check form-check-inline me-4"
-              ng-repeat="x in ['Nő','Férfi'] track by $index"
-            >
-              <input
-                id="profile-{{x}}"
-                name="gender"
-                type="radio"
-                ng-value="x === 'Nő' ? 'F' : 'M'"
-                class="form-check-input"
-                ng-model="$root.user.gender"
-                required
-              />
-              <label for="profile-{{x}}" class="form-check-label opacity-100">
-                {{x}}
-              </label>
-            </div>
-          </div>
-          <div
-            class="col-1 d-flex align-items-center justify-content-start ps-1"
-          >
-            <span
-              class="fw-bolder text-success"
-              ng-class="{'invisible': profileForm.gender.$invalid}"
-            >
-              &check;
-            </span>
-          </div>
-        </fieldset>
-
-        <!-- Image -->
-        <div class="row input-row mb-5">
-          <div class="col-form-label col-12 col-md-4 text-md-end">
-            <i class="fa-solid fa-image-portrait me-1"></i>
-            <span class="text-capitalize"> kép: </span>
-          </div>
-          <div class="col-11 col-md-7 position-relative" style="height: 100px">
-            <input
-              id="profile-image"
-              name="image"
-              type="file"
-              accept="image/*"
-              class="form-control form-control d-none"
-              ng-model="helper.image"
-              file-input
-              ng-clear-icon='{"left":"160px"}'
-            />
-            <label for="profile-image">
-              <div
-                class="bg-img bg-img-cover overflow-hidden rounded-circle border d-flex align-items-center justify-content-center cursor-pointer"
-                style="width: 130px; height: 130px"
-                ng-style="{'background-image':model.mimeType?'url(data:'+model.mimeType+';base64,'+model.img+')':($root.user.gender?'url(./media/image/'+($root.user.gender==='F'?'fe':'')+'male-blank.webp)':'')}"
-              >
-                <span
-                  class="text-center text-muted"
-                  ng-show="!model.img && !$root.user.gender"
-                >
-                  <i class="fa-solid fa-upload"></i><br />
-                  <span class="fs-sm">Max: 64KB</span>
-                </span>
-              </div>
-            </label>
-          </div>
-        </div>
-
-        <!-- Country -->
-        <div class="row input-row mb-3">
-          <label
-            for="profile-country"
-            class="col-form-label col-12 col-md-4 text-md-end"
-          >
-            <i class="fa-solid fa-flag me-1"></i>
-            <span class="text-capitalize"> ország: </span>
-          </label>
-          <div class="col-11 col-md-7 position-relative">
-            <input
-              id="profile-country"
-              name="country"
-              type="text"
-              placeholder="ország"
-              class="form-control"
-              spellcheck="false"
-              autocomplete="off"
-              maxlength="100"
-              ng-model="model.country"
-              ng-clear-icon
-            />
-          </div>
-        </div>
-
-        <!-- Phone (Country code / Phone) -->
-        <div class="row input-row mb-3">
-          <label
-            for="profile-phone"
-            class="col-form-label col-12 col-md-4 text-md-end"
-          >
-            <i class="fa-solid fa-mobile-screen me-1"></i>
-            <span class="text-capitalize"> telefonszám: </span>
-          </label>
-          <div class="col-11 col-md-7 position-relative">
-            <div class="input-group">
-              <span class="me-2 mt-1">+</span>
-              <input
-                id="profile-countryCode"
-                name="countryCode"
-                type="text"
-                placeholder="+36"
-                class="form-control"
-                spellcheck="false"
-                autocomplete="off"
-                maxlength="10"
-                ng-model="model.countryCode"
-                ng-clear-icon='{"left":"100px"}'
-                style="max-width: 100px"
-              />
-              <input
-                id="profile-phone"
-                name="phone"
-                type="tel"
-                placeholder="telefonszám"
-                class="form-control"
-                spellcheck="false"
-                autocomplete="off"
-                maxlength="10"
-                ng-model="model.phone"
-                ng-pattern="/^$|^(?!(0))[0-9]{7,10}$/"
-                ng-allow-numbers
-                ng-clear-icon='{"right":"8px"}'
-              />
-            </div>
-          </div>
-        </div>
-
-        <!-- City -->
-        <div class="row input-row mb-3">
-          <label
-            for="profile-city"
-            class="col-form-label col-12 col-md-4 text-md-end"
-          >
-            <i class="fa-solid fa-city me-1"></i>
-            <span class="text-capitalize"> város: </span>
-          </label>
-          <div class="col-11 col-md-7 position-relative">
-            <input
-              id="profile-city"
-              name="city"
-              type="text"
-              placeholder="város"
-              class="form-control"
-              spellcheck="false"
-              autocomplete="off"
-              maxlength="100"
-              ng-model="model.city"
-              ng-clear-icon
-            />
-          </div>
-        </div>
-
-        <!-- Post code -->
-        <div class="row input-row mb-3">
-          <label
-            for="profile-postcode"
-            class="col-form-label col-12 col-md-4 text-md-end"
-          >
-            <i class="fa-solid fa-list-ol me-1"></i>
-            <span class="text-capitalize"> irányítószám: </span>
-          </label>
-          <div class="col-11 col-md-7 position-relative">
-            <input
-              id="profile-postcode"
-              name="postcode"
-              type="text"
-              placeholder="irányítószám"
-              class="form-control"
-              spellcheck="false"
-              autocomplete="off"
-              maxlength="10"
-              ng-model="model.postcode"
-              style="max-width: 120px"
-              ng-clear-icon='{"left":"110px"}'
-            />
-          </div>
-        </div>
-
-        <!-- Address -->
-        <div class="row input-row mb-5">
-          <label
-            for="profile-address"
-            class="col-form-label col-12 col-md-4 text-md-end"
-          >
-            <i class="fa-solid fa-location-dot me-1"></i>
-            <span class="text-capitalize"> cím: </span>
-          </label>
-          <div class="col-11 col-md-7 position-relative">
-            <textarea
-              id="profile-address"
-              name="address"
-              placeholder="cím"
-              class="form-control"
-              spellcheck="false"
-              autocomplete="off"
-              rows="1"
-              ng-model="model.address"
-              ng-clear-icon
-            >
-            </textarea>
-          </div>
-        </div>
-
-        <!-- Save button -->
-        <div class="row justify-content-end">
-          <button
-            type="button"
-            data-bs-toggle="modal"
-            data-bs-target="#modalRequest"
-            class="mt-2 btn btn-primary w-auto px-5 me-3 text-capitalize"
-            ng-disabled="profileForm.$invalid || !isModified"
-            ng-click="methods.httpRequest()">
-            Mentés
-          </button>
-        </div>
-      </form>
     </div>
   </div>
 </div>
