foglaljon időpontot gomb beállítása ha be vagyunk vagy ha nem vagyunk bejelentkezve

--- a/html/home.html
+++ b/html/home.html
@@ -32,11 +32,11 @@
                 könnyedén, válasszon a különböző mosási csomagjaink közül, és tapasztalja
                 meg, mit jelent az igazi autós luxus!
               </p>
-              <a class="btn btn-warning fw-bold" href="#!">
+              <a class="btn btn-warning fw-bold" 
+                 ng-click="redirectToAppointment()">
                 Foglaljon időpontot most!
               </a>
             </div>
-
           </div>
         </div>
       </div>
